<resources>
    <string name="app_name">干货集中营</string>
    <string name="skin_title">多彩皮肤</string>

    <string name="tv_tip">点击或上滑加载更多内容</string>
    <string name="tv_tip_loading">正在加载更多内容···</string>
    <!--nav_menu-->
    <string name="menu_user">个 人 信 息</string>
    <string name="menu_favorite">我 的 收 藏</string>
    <string name="menu_skin">多 彩 皮 肤</string>
    <string name="menu_app">更 多 应 用</string>
    <string name="menu_feedback">用 户 反 馈</string>
    <string name="menu_about">关 于 干 货</string>

    <string name="skin_bohelv">薄荷绿</string>
    <string name="skin_furonghong">芙蓉红</string>
    <string name="skin_bingxuelan">冰雪蓝</string>
    <string name="skin_ganlanlv">橄榄绿</string>

    <string name="sys_exit">再按一次退出程序</string>
</resources>
